fix menu alignment mobile

--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -80,7 +80,6 @@
       color: $color;
       font-size: 22px;
       text-decoration: none;
-      padding: 0 6em;
     }
 
     &.selected a {
